Another round of target replacement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,35 +12,15 @@ find_package(Threads)
 find_package(CMakeTools)
 UseCMakeTools()
 find_package(Xrootd)
-find_package(XercesC)
-find_package(UUID)
-find_package(TINYXML2)
-find_package(OpenSSL)
-find_package(CMSMD5)
-find_package(TBB)
-find_package(CppUnit)
 find_package(CLHEP)
-include_directories(${XERCESC_INCLUDE_DIR})
-include_directories(${TINYXML2_INCLUDE_DIR})
-include_directories(${CATCH2_INCLUDE_DIR})
-include_directories(${Boost_INCLUDE_DIR}/python)
-include_directories(${VDT_INCLUDE_DIR})
-include_directories(${MD5_INCLUDE_DIR})
-include_directories(${XROOTD_INCLUDE_DIR}/xrootd)
-include_directories(${CPPUNIT_INCLUDE_DIR})
-include_directories(${JEMALLOC_INCLUDE_DIR})
-include_directories(${Python2_INCLUDE_DIRS})
-include_directories(${ZLIB_INCLUDE_DIR})
-include_directories(${TCMALLOC_INCLUDE_DIR})
-include_directories(${UUID_INCLUDE_DIR})
-include_directories(${ROOT_INCLUDE_DIR})
-include_directories(${XROOTD_INCLUDE_DIR})
-include_directories(${TBB_INCLUDE_DIRS})
-include_directories(${OPENSSL_INCLUDE_DIR})
-include_directories(${Boost_INCLUDE_DIR})
-include_directories(${Python2_INCLUDE_DIRS}/pybind11)
-include_directories(${GSL_INCLUDE_DIR})
-include_directories(${CLHEP_INCLUDE_DIR})
+find_package(CMSMD5)
+find_package(Catch2)
+find_package(CppUnit)
+find_package(OpenSSL)
+find_package(TBB)
+find_package(TINYXML2)
+find_package(UUID)
+find_package(XercesC)
 add_subdirectory(DataFormats)
 install(DIRECTORY DataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(FWCore)
@@ -53,10 +33,7 @@ add_subdirectory(SimDataFormats)
 install(DIRECTORY SimDataFormats DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 add_subdirectory(Utilities)
 install(DIRECTORY Utilities DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
-install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
 install(FILES CMakeLists.txt DESTINATION ${CMAKE_INSTALL_PREFIX}/src)
-install(DIRECTORY cmaketools DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)
-install(DIRECTORY scram2cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/src PATTERN ".git" EXCLUDE)
 set(BUILD_TESTING ON)
 include(CTest)
 enable_testing()
