--- a/DataFormats/Common/CMakeLists.txt
+++ b/DataFormats/Common/CMakeLists.txt
@@ -26,44 +26,58 @@ add_library(DataFormatsCommon SHARED
 )
 
 target_include_directories(DataFormatsCommon PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(DataFormatsCommon PUBLIC
- ${Boost_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(DataFormatsCommon PUBLIC
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  DataFormatsProvenance
-  DataFormatsStdDictionaries
-  FWCoreMessageLogger
-  FWCoreUtilities
-  Python2::Python
-  ROOT::MathCore
-  ROOT::Net
-  ROOT::Thread
-  ROOT::Tree
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS DataFormatsCommon DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::DataFormatsCommon)
+target_link_libraries(DataFormatsCommon PUBLIC
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+Core
+DataFormatsProvenance
+DataFormatsStdDictionaries
+FWCoreMessageLogger
+FWCoreUtilities
+MathCore
+Net
+Python::python
+RIO
+Thread
+Threads::Threads
+Tree
+)
+
+
+install( TARGETS DataFormatsCommon DESTINATION  lib  EXPORT cmssw::DataFormatsCommon)
+
+include_directories(
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+)
 
 include_directories(${CMAKE_SOURCE_DIR})
+
 include_directories(/usr/include/)
-include_directories(${Boost_INCLUDE_DIR})
-include_directories(${MD5_INCLUDE_DIR})
-include_directories(${ROOT_INCLUDE_DIR})
-include_directories(${TBB_INCLUDE_DIRS})
-include_directories(${TINYXML2_INCLUDE_DIR})
-include_directories(${UUID_INCLUDE_DIR})
-reflex_build_dictionary(DataFormatsCommon src/classes.h src/classes_def.xml OPTIONS )
+
+reflex_build_dictionary(DataFormatsCommon src/classes.h src/classes_def.xml)
+
 add_dependencies(DataFormatsCommon DataFormatsCommon-dictgen)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsCommonDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsCommon.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
