--- a/FWCore/Catalog/CMakeLists.txt
+++ b/FWCore/Catalog/CMakeLists.txt
@@ -7,33 +7,36 @@ add_library(FWCoreCatalog SHARED
 )
 
 target_include_directories(FWCoreCatalog PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreCatalog PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreCatalog PUBLIC
-  ${XERCESC_LIBRARIES}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreConcurrency
-  FWCoreServiceRegistry
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreCatalog DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreCatalog)
+target_link_libraries(FWCoreCatalog PUBLIC
+${XERCESC_LIBRARIES}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreConcurrency
+FWCoreServiceRegistry
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
+install( TARGETS FWCoreCatalog DESTINATION  lib  EXPORT cmssw::FWCoreCatalog)
 
