--- a/FWCore/Catalog/test/CMakeLists.txt
+++ b/FWCore/Catalog/test/CMakeLists.txt
@@ -3,21 +3,25 @@ add_executable(edmCatalogFileLocator_t
 )
 
 target_include_directories(edmCatalogFileLocator_t PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(edmCatalogFileLocator_t PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-target_link_libraries(edmCatalogFileLocator_t PUBLIC
-  FWCoreCatalog
-  FWCorePluginManager
-  FWCoreServiceRegistry
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
+target_link_libraries(edmCatalogFileLocator_t PUBLIC
+FWCoreCatalog
+FWCorePluginManager
+FWCoreServiceRegistry
+)
+
+
 add_test(NAME edmCatalogFileLocator_t COMMAND edmCatalogFileLocator_t)
+
