--- a/FWCore/FWLite/bin/CMakeLists.txt
+++ b/FWCore/FWLite/bin/CMakeLists.txt
@@ -3,66 +3,74 @@ add_executable(edmClassStorageSize
 )
 
 target_include_directories(edmClassStorageSize PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(edmClassStorageSize PUBLIC
- ${Boost_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(edmClassStorageSize PUBLIC
-  ${TINYXML2_LIBRARY}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreFWLite
-  Python2::Python
-  ROOT::MathCore
-  ROOT::Net
-  ROOT::Thread
-  ROOT::Tree
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS edmClassStorageSize DESTINATION  ${CMAKE_INSTALL_BINDIR}  EXPORT stitched::edmClassStorageSize)
+target_link_libraries(edmClassStorageSize PUBLIC
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+Core
+FWCoreFWLite
+MathCore
+Net
+Python::python
+RIO
+Thread
+Threads::Threads
+Tree
+)
+
+
+install( TARGETS edmClassStorageSize DESTINATION ${CMAKE_BIN_INSTALLDIR}  EXPORT cmssw::edmClassStorageSize)
 
 add_executable(edmBranchStorageSize
   storageSizeForBranch.cc
 )
 
 target_include_directories(edmBranchStorageSize PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(edmBranchStorageSize PUBLIC
- ${Boost_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(edmBranchStorageSize PUBLIC
-  ${TINYXML2_LIBRARY}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreFWLite
-  Python2::Python
-  ROOT::MathCore
-  ROOT::Net
-  ROOT::Thread
-  ROOT::Tree
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS edmBranchStorageSize DESTINATION  ${CMAKE_INSTALL_BINDIR}  EXPORT stitched::edmBranchStorageSize)
+target_link_libraries(edmBranchStorageSize PUBLIC
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+Core
+FWCoreFWLite
+MathCore
+Net
+Python::python
+RIO
+Thread
+Threads::Threads
+Tree
+)
+
+
+install( TARGETS edmBranchStorageSize DESTINATION ${CMAKE_BIN_INSTALLDIR}  EXPORT cmssw::edmBranchStorageSize)
 
