--- a/FWCore/Integration/CMakeLists.txt
+++ b/FWCore/Integration/CMakeLists.txt
@@ -4,21 +4,24 @@ add_library(FWCoreIntegration SHARED
 )
 
 target_include_directories(FWCoreIntegration PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreIntegration PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreIntegration PUBLIC
-  FWCoreFramework
-  FWCoreUtilities
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreIntegration DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreIntegration)
+target_link_libraries(FWCoreIntegration PUBLIC
+FWCoreFramework
+FWCoreUtilities
+)
+
+
+install( TARGETS FWCoreIntegration DESTINATION  lib  EXPORT cmssw::FWCoreIntegration)
 
