--- a/FWCore/MessageLogger/CMakeLists.txt
+++ b/FWCore/MessageLogger/CMakeLists.txt
@@ -15,39 +15,51 @@ add_library(FWCoreMessageLogger SHARED
 )
 
 target_include_directories(FWCoreMessageLogger PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreMessageLogger PUBLIC
- ${Boost_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreMessageLogger PUBLIC
-  ${TBB_LIBRARIES}
-  ${TINYXML2_LIBRARY}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreMessageLogger DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreMessageLogger)
+target_link_libraries(FWCoreMessageLogger PUBLIC
+${TBB_LIBRARIES}
+${TINYXML2_LIBRARY}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
+install( TARGETS FWCoreMessageLogger DESTINATION  lib  EXPORT cmssw::FWCoreMessageLogger)
+
+include_directories(
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+)
 
 include_directories(${CMAKE_SOURCE_DIR})
+
 include_directories(/usr/include/)
-include_directories(${Boost_INCLUDE_DIR})
-include_directories(${MD5_INCLUDE_DIR})
-include_directories(${ROOT_INCLUDE_DIR})
-include_directories(${TBB_INCLUDE_DIRS})
-include_directories(${TINYXML2_INCLUDE_DIR})
-include_directories(${UUID_INCLUDE_DIR})
-reflex_build_dictionary(FWCoreMessageLogger src/classes.h src/classes_def.xml OPTIONS )
+
+reflex_build_dictionary(FWCoreMessageLogger src/classes.h src/classes_def.xml)
+
 add_dependencies(FWCoreMessageLogger FWCoreMessageLogger-dictgen)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/FWCoreMessageLoggerDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/FWCoreMessageLogger.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
