--- a/FWCore/MessageService/CMakeLists.txt
+++ b/FWCore/MessageService/CMakeLists.txt
@@ -22,34 +22,37 @@ add_library(FWCoreMessageService SHARED
 )
 
 target_include_directories(FWCoreMessageService PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreMessageService PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreMessageService PUBLIC
-  ${TBB_LIBRARIES}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  DataFormatsProvenance
-  FWCoreMessageLogger
-  FWCoreParameterSet
-  FWCoreServiceRegistry
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreMessageService DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreMessageService)
+target_link_libraries(FWCoreMessageService PUBLIC
+${TBB_LIBRARIES}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+DataFormatsProvenance
+FWCoreMessageLogger
+FWCoreParameterSet
+FWCoreServiceRegistry
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
+install( TARGETS FWCoreMessageService DESTINATION  lib  EXPORT cmssw::FWCoreMessageService)
 
