--- a/FWCore/MessageService/bin/CMakeLists.txt
+++ b/FWCore/MessageService/bin/CMakeLists.txt
@@ -3,34 +3,37 @@ add_executable(Standalone
 )
 
 target_include_directories(Standalone PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(Standalone PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(Standalone PUBLIC
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreMessageLogger
-  FWCoreMessageService
-  FWCorePluginManager
-  FWCorePythonParameterSet
-  FWCoreServiceRegistry
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS Standalone DESTINATION  ${CMAKE_INSTALL_BINDIR}  EXPORT stitched::Standalone)
+target_link_libraries(Standalone PUBLIC
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreMessageLogger
+FWCoreMessageService
+FWCorePluginManager
+FWCorePythonParameterSet
+FWCoreServiceRegistry
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
+install( TARGETS Standalone DESTINATION ${CMAKE_BIN_INSTALLDIR}  EXPORT cmssw::Standalone)
 
