--- a/FWCore/MessageService/plugins/CMakeLists.txt
+++ b/FWCore/MessageService/plugins/CMakeLists.txt
@@ -3,19 +3,22 @@ add_library(FWCoreMessageServicePlugins SHARED
 )
 
 target_include_directories(FWCoreMessageServicePlugins PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreMessageServicePlugins PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreMessageServicePlugins PUBLIC
-  FWCoreMessageService
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreMessageServicePlugins DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreMessageServicePlugins)
+target_link_libraries(FWCoreMessageServicePlugins PUBLIC
+FWCoreMessageService
+)
+
+
+install( TARGETS FWCoreMessageServicePlugins DESTINATION  lib  EXPORT cmssw::FWCoreMessageServicePlugins)
 
