--- a/FWCore/ParameterSet/CMakeLists.txt
+++ b/FWCore/ParameterSet/CMakeLists.txt
@@ -38,31 +38,34 @@ add_library(FWCoreParameterSet SHARED
 )
 
 target_include_directories(FWCoreParameterSet PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreParameterSet PUBLIC
- ${Boost_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreParameterSet PUBLIC
-  ${TBB_LIBRARIES}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  DataFormatsProvenance
-  FWCoreMessageLogger
-  FWCorePluginManager
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreParameterSet DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreParameterSet)
+target_link_libraries(FWCoreParameterSet PUBLIC
+${TBB_LIBRARIES}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+DataFormatsProvenance
+FWCoreMessageLogger
+FWCorePluginManager
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
+install( TARGETS FWCoreParameterSet DESTINATION  lib  EXPORT cmssw::FWCoreParameterSet)
 
