--- a/FWCore/ServiceRegistry/test/CMakeLists.txt
+++ b/FWCore/ServiceRegistry/test/CMakeLists.txt
@@ -6,63 +6,69 @@ add_library(FWCoreServiceRegistryTestDummyService SHARED
 )
 
 target_include_directories(FWCoreServiceRegistryTestDummyService PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreServiceRegistryTestDummyService PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${CPPUNIT_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${CPPUNIT_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
+
 target_link_libraries(FWCoreServiceRegistryTestDummyService PUBLIC
-  ${CPPUNIT_LIBRARY}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreServiceRegistry
-  Python2::Python
-  Threads::Threads
+${CPPUNIT_LIBRARY}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreServiceRegistry
+Python::python
+Threads::Threads
 )
+
 
 add_library(FWCoreServiceRegistryTestDummyServicePlugin SHARED 
   stubs/Modules.cc
 )
 
 target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${CPPUNIT_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${CPPUNIT_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
+
 target_link_libraries(FWCoreServiceRegistryTestDummyServicePlugin PUBLIC
-  ${CPPUNIT_LIBRARY}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreServiceRegistry
-  FWCoreServiceRegistryTestDummyService
-  Python2::Python
-  Threads::Threads
+${CPPUNIT_LIBRARY}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreServiceRegistry
+FWCoreServiceRegistryTestDummyService
+Python::python
+Threads::Threads
 )
+
 
 add_executable(testServiceRegistry
   connect_but_block_self_t.cppunit.cc
@@ -71,70 +77,78 @@ add_executable(testServiceRegistry
 )
 
 target_include_directories(testServiceRegistry PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(testServiceRegistry PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${CPPUNIT_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(testServiceRegistry PUBLIC
-  ${CPPUNIT_LIBRARY}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreParameterSet
-  FWCorePluginManager
-  FWCoreServiceRegistry
-  FWCoreServiceRegistryTestDummyService
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${CPPUNIT_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
+target_link_libraries(testServiceRegistry PUBLIC
+${CPPUNIT_LIBRARY}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreParameterSet
+FWCorePluginManager
+FWCoreServiceRegistry
+FWCoreServiceRegistryTestDummyService
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
 add_test(NAME testServiceRegistry COMMAND testServiceRegistry)
+
 add_executable(servicesmanager_order
   servicesmanager_order.cpp
 )
 
 target_include_directories(servicesmanager_order PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(servicesmanager_order PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${CPPUNIT_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(servicesmanager_order PUBLIC
-  ${CPPUNIT_LIBRARY}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreParameterSet
-  FWCorePluginManager
-  FWCoreServiceRegistry
-  FWCoreServiceRegistryTestDummyService
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${CPPUNIT_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
+target_link_libraries(servicesmanager_order PUBLIC
+${CPPUNIT_LIBRARY}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreParameterSet
+FWCorePluginManager
+FWCoreServiceRegistry
+FWCoreServiceRegistryTestDummyService
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
 add_test(NAME servicesmanager_order COMMAND servicesmanager_order)
+
