--- a/FWCore/Sources/CMakeLists.txt
+++ b/FWCore/Sources/CMakeLists.txt
@@ -12,27 +12,30 @@ add_library(FWCoreSources SHARED
 )
 
 target_include_directories(FWCoreSources PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreSources PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreSources PUBLIC
-  ${TBB_LIBRARIES}
-  DataFormatsProvenance
-  FWCoreCatalog
-  FWCoreFramework
-  FWCoreMessageLogger
-  FWCoreParameterSet
-  FWCorePluginManager
-  FWCoreUtilities
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreSources DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreSources)
+target_link_libraries(FWCoreSources PUBLIC
+${TBB_LIBRARIES}
+DataFormatsProvenance
+FWCoreCatalog
+FWCoreFramework
+FWCoreMessageLogger
+FWCoreParameterSet
+FWCorePluginManager
+FWCoreUtilities
+)
+
+
+install( TARGETS FWCoreSources DESTINATION  lib  EXPORT cmssw::FWCoreSources)
 
