--- a/FWCore/TFWLiteSelector/CMakeLists.txt
+++ b/FWCore/TFWLiteSelector/CMakeLists.txt
@@ -6,41 +6,55 @@ add_library(FWCoreTFWLiteSelector SHARED
 )
 
 target_include_directories(FWCoreTFWLiteSelector PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreTFWLiteSelector PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreTFWLiteSelector PUBLIC
-  DataFormatsCommon
-  DataFormatsProvenance
-  FWCoreFramework
-  FWCoreParameterSet
-  FWCoreUtilities
-  ROOT::MathCore
-  ROOT::Net
-  ROOT::Thread
-  ROOT::Tree
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreTFWLiteSelector DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreTFWLiteSelector)
+target_link_libraries(FWCoreTFWLiteSelector PUBLIC
+Core
+DataFormatsCommon
+DataFormatsProvenance
+FWCoreFramework
+FWCoreParameterSet
+FWCoreUtilities
+MathCore
+Net
+RIO
+Thread
+Tree
+)
+
+
+install( TARGETS FWCoreTFWLiteSelector DESTINATION  lib  EXPORT cmssw::FWCoreTFWLiteSelector)
+
+include_directories(
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
+)
 
 include_directories(${CMAKE_SOURCE_DIR})
+
 include_directories(/usr/include/)
-include_directories(${Boost_INCLUDE_DIR})
-include_directories(${Boost_INCLUDE_DIR}/python)
-include_directories(${MD5_INCLUDE_DIR})
-include_directories(${Python2_INCLUDE_DIRS})
-include_directories(${ROOT_INCLUDE_DIR})
-include_directories(${TBB_INCLUDE_DIRS})
-include_directories(${TINYXML2_INCLUDE_DIR})
-include_directories(${UUID_INCLUDE_DIR})
-include_directories(${XERCESC_INCLUDE_DIR})
-reflex_build_dictionary(FWCoreTFWLiteSelector src/classes.h src/classes_def.xml OPTIONS )
+
+reflex_build_dictionary(FWCoreTFWLiteSelector src/classes.h src/classes_def.xml)
+
 add_dependencies(FWCoreTFWLiteSelector FWCoreTFWLiteSelector-dictgen)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/FWCoreTFWLiteSelectorDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/FWCoreTFWLiteSelector.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
