--- a/IOMC/RandomEngine/plugins/CMakeLists.txt
+++ b/IOMC/RandomEngine/plugins/CMakeLists.txt
@@ -3,24 +3,27 @@ add_library(IOMCRandomEnginePlugins SHARED
 )
 
 target_include_directories(IOMCRandomEnginePlugins PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(IOMCRandomEnginePlugins PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${CLHEP_INCLUDE_DIR}
- ${GSL_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-target_link_libraries(IOMCRandomEnginePlugins PUBLIC
-  FWCoreFramework
-  FWCoreServiceRegistry
-  IOMCRandomEngine
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${CLHEP_INCLUDE_DIR}
+${GSL_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
-install( TARGETS IOMCRandomEnginePlugins DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::IOMCRandomEnginePlugins)
+target_link_libraries(IOMCRandomEnginePlugins PUBLIC
+FWCoreFramework
+FWCoreServiceRegistry
+IOMCRandomEngine
+)
+
+
+install( TARGETS IOMCRandomEnginePlugins DESTINATION  lib  EXPORT cmssw::IOMCRandomEnginePlugins)
 
