--- a/IOPool/Output/CMakeLists.txt
+++ b/IOPool/Output/CMakeLists.txt
@@ -7,33 +7,38 @@ add_library(IOPoolOutput SHARED
 )
 
 target_include_directories(IOPoolOutput PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(IOPoolOutput PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-target_link_libraries(IOPoolOutput PUBLIC
-  DataFormatsCommon
-  DataFormatsProvenance
-  FWCoreFramework
-  FWCoreMessageLogger
-  FWCoreParameterSet
-  FWCoreServiceRegistry
-  FWCoreUtilities
-  FWCoreVersion
-  IOPoolCommon
-  IOPoolProvenance
-  ROOT::MathCore
-  ROOT::Net
-  ROOT::Thread
-  ROOT::Tree
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
-install( TARGETS IOPoolOutput DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::IOPoolOutput)
+target_link_libraries(IOPoolOutput PUBLIC
+Core
+DataFormatsCommon
+DataFormatsProvenance
+FWCoreFramework
+FWCoreMessageLogger
+FWCoreParameterSet
+FWCoreServiceRegistry
+FWCoreUtilities
+FWCoreVersion
+IOPoolCommon
+IOPoolProvenance
+MathCore
+Net
+RIO
+Thread
+Tree
+)
+
+
+install( TARGETS IOPoolOutput DESTINATION  lib  EXPORT cmssw::IOPoolOutput)
 
