--- a/IOPool/Streamer/CMakeLists.txt
+++ b/IOPool/Streamer/CMakeLists.txt
@@ -18,39 +18,45 @@ add_library(IOPoolStreamer SHARED
 )
 
 target_include_directories(IOPoolStreamer PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(IOPoolStreamer PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${OPENSSL_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
- ${ZLIB_INCLUDE_DIR}
-)
-add_compile_options("-D_FILE_OFFSET_BITS=64")
-target_link_libraries(IOPoolStreamer PUBLIC
-  DataFormatsCommon
-  DataFormatsProvenance
-  DataFormatsStreamer
-  FWCoreCatalog
-  FWCoreFramework
-  FWCoreParameterSet
-  FWCorePluginManager
-  FWCoreServiceRegistry
-  FWCoreSources
-  FWCoreUtilities
-  FWCoreVersion
-  ROOT::MathCore
-  ROOT::Net
-  ROOT::Thread
-  ROOT::Tree
-  UtilitiesStorageFactory
-  z
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${OPENSSL_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
+${ZLIB_INCLUDE_DIR}
 )
 
-install( TARGETS IOPoolStreamer DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::IOPoolStreamer)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
+
+target_link_libraries(IOPoolStreamer PUBLIC
+Core
+DataFormatsCommon
+DataFormatsProvenance
+DataFormatsStreamer
+FWCoreCatalog
+FWCoreFramework
+FWCoreParameterSet
+FWCorePluginManager
+FWCoreServiceRegistry
+FWCoreSources
+FWCoreUtilities
+FWCoreVersion
+MathCore
+Net
+RIO
+Thread
+Tree
+UtilitiesStorageFactory
+z
+)
+
+
+install( TARGETS IOPoolStreamer DESTINATION  lib  EXPORT cmssw::IOPoolStreamer)
 
