--- a/Utilities/StorageFactory/CMakeLists.txt
+++ b/Utilities/StorageFactory/CMakeLists.txt
@@ -24,37 +24,41 @@ add_library(UtilitiesStorageFactory SHARED
 )
 
 target_include_directories(UtilitiesStorageFactory PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(UtilitiesStorageFactory PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${OPENSSL_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-add_compile_options("-D_FILE_OFFSET_BITS=64")
-target_link_libraries(UtilitiesStorageFactory PUBLIC
-  ${OPENSSL_CRYPTO_LIBRARY}
-  ${OPENSSL_SSL_LIBRARY}
-  ${TBB_LIBRARIES}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreMessageLogger
-  FWCorePluginManager
-  FWCoreServiceRegistry
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${OPENSSL_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS UtilitiesStorageFactory DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::UtilitiesStorageFactory)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
+
+target_link_libraries(UtilitiesStorageFactory PUBLIC
+${OPENSSL_CRYPTO_LIBRARY}
+${OPENSSL_SSL_LIBRARY}
+${TBB_LIBRARIES}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreMessageLogger
+FWCorePluginManager
+FWCoreServiceRegistry
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
+install( TARGETS UtilitiesStorageFactory DESTINATION  lib  EXPORT cmssw::UtilitiesStorageFactory)
 
