--- a/DataFormats/CMakeLists.txt
+++ b/DataFormats/CMakeLists.txt
@@ -15,6 +15,8 @@ add_dependencies(DataFormats_all
   DataFormatsFEDRawData
   DataFormatsFWLite
   DataFormatsProvenance
+  DataFormatsStdDictionaries
   DataFormatsStreamer
   DataFormatsTestObjects
+  DataFormatsWrappedStdDictionaries
 )
