--- a/DataFormats/FEDRawData/CMakeLists.txt
+++ b/DataFormats/FEDRawData/CMakeLists.txt
@@ -10,28 +10,40 @@ add_library(DataFormatsFEDRawData SHARED
 )
 
 target_include_directories(DataFormatsFEDRawData PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(DataFormatsFEDRawData PUBLIC
- ${Boost_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(DataFormatsFEDRawData PUBLIC
-  DataFormatsCommon
-  FWCoreUtilities
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS DataFormatsFEDRawData DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::DataFormatsFEDRawData)
+target_link_libraries(DataFormatsFEDRawData PUBLIC
+DataFormatsCommon
+FWCoreUtilities
+)
+
+
+install( TARGETS DataFormatsFEDRawData DESTINATION  lib  EXPORT cmssw::DataFormatsFEDRawData)
+
+include_directories(
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+)
 
 include_directories(${CMAKE_SOURCE_DIR})
+
 include_directories(/usr/include/)
-include_directories(${Boost_INCLUDE_DIR})
-include_directories(${MD5_INCLUDE_DIR})
-include_directories(${ROOT_INCLUDE_DIR})
-include_directories(${TBB_INCLUDE_DIRS})
-include_directories(${TINYXML2_INCLUDE_DIR})
-include_directories(${UUID_INCLUDE_DIR})
-reflex_build_dictionary(DataFormatsFEDRawData src/classes.h src/classes_def.xml OPTIONS )
+
+reflex_build_dictionary(DataFormatsFEDRawData src/classes.h src/classes_def.xml)
+
 add_dependencies(DataFormatsFEDRawData DataFormatsFEDRawData-dictgen)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawDataDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/DataFormatsFEDRawData.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
