--- a/FWCore/PluginManager/CMakeLists.txt
+++ b/FWCore/PluginManager/CMakeLists.txt
@@ -15,27 +15,30 @@ add_library(FWCorePluginManager SHARED
 )
 
 target_include_directories(FWCorePluginManager PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCorePluginManager PUBLIC
- ${Boost_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(FWCorePluginManager PUBLIC
-  ${TBB_LIBRARIES}
-  Boost::filesystem
-  Boost::iostreams
-  Boost::program_options
-  Boost::python27
-  Boost::regex
-  Boost::serialization
-  Boost::system
-  Boost::thread
-  FWCoreUtilities
-  Python2::Python
-  Threads::Threads
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS FWCorePluginManager DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCorePluginManager)
+target_link_libraries(FWCorePluginManager PUBLIC
+${TBB_LIBRARIES}
+Boost::filesystem
+Boost::iostreams
+Boost::program_options
+Boost::python27
+Boost::regex
+Boost::serialization
+Boost::system
+Boost::thread
+FWCoreUtilities
+Python::python
+Threads::Threads
+)
+
+
+install( TARGETS FWCorePluginManager DESTINATION  lib  EXPORT cmssw::FWCorePluginManager)
 
