--- a/FWCore/PrescaleService/CMakeLists.txt
+++ b/FWCore/PrescaleService/CMakeLists.txt
@@ -4,20 +4,23 @@ add_library(FWCorePrescaleService SHARED
 )
 
 target_include_directories(FWCorePrescaleService PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCorePrescaleService PUBLIC
- ${Boost_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(FWCorePrescaleService PUBLIC
-  DataFormatsProvenance
-  FWCoreMessageLogger
-  FWCoreParameterSet
-  FWCoreUtilities
+${Boost_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS FWCorePrescaleService DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCorePrescaleService)
+target_link_libraries(FWCorePrescaleService PUBLIC
+DataFormatsProvenance
+FWCoreMessageLogger
+FWCoreParameterSet
+FWCoreUtilities
+)
+
+
+install( TARGETS FWCorePrescaleService DESTINATION  lib  EXPORT cmssw::FWCorePrescaleService)
 
