--- a/FWCore/TFWLiteSelectorTest/CMakeLists.txt
+++ b/FWCore/TFWLiteSelectorTest/CMakeLists.txt
@@ -4,37 +4,59 @@ add_library(FWCoreTFWLiteSelectorTest SHARED
 )
 
 target_include_directories(FWCoreTFWLiteSelectorTest PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(FWCoreTFWLiteSelectorTest PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-target_link_libraries(FWCoreTFWLiteSelectorTest PUBLIC
-  DataFormatsCommon
-  FWCoreTFWLiteSelector
-  ROOT::Graf3d
-  ROOT::Postscript
-  ROOT::TreePlayer
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
-install( TARGETS FWCoreTFWLiteSelectorTest DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreTFWLiteSelectorTest)
+target_link_libraries(FWCoreTFWLiteSelectorTest PUBLIC
+Core
+DataFormatsCommon
+FWCoreTFWLiteSelector
+Gpad
+Graf
+Graf3d
+Hist
+MathCore
+Matrix
+Net
+Postscript
+RIO
+Thread
+Tree
+TreePlayer
+)
+
+
+install( TARGETS FWCoreTFWLiteSelectorTest DESTINATION  lib  EXPORT cmssw::FWCoreTFWLiteSelectorTest)
+
+include_directories(
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
+)
 
 include_directories(${CMAKE_SOURCE_DIR})
+
 include_directories(/usr/include/)
-include_directories(${Boost_INCLUDE_DIR})
-include_directories(${Boost_INCLUDE_DIR}/python)
-include_directories(${MD5_INCLUDE_DIR})
-include_directories(${Python2_INCLUDE_DIRS})
-include_directories(${ROOT_INCLUDE_DIR})
-include_directories(${TBB_INCLUDE_DIRS})
-include_directories(${TINYXML2_INCLUDE_DIR})
-include_directories(${UUID_INCLUDE_DIR})
-include_directories(${XERCESC_INCLUDE_DIR})
-reflex_build_dictionary(FWCoreTFWLiteSelectorTest src/classes.h src/classes_def.xml OPTIONS )
+
+reflex_build_dictionary(FWCoreTFWLiteSelectorTest src/classes.h src/classes_def.xml)
+
 add_dependencies(FWCoreTFWLiteSelectorTest FWCoreTFWLiteSelectorTest-dictgen)
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/FWCoreTFWLiteSelectorTestDict_rdict.pcm  ${CMAKE_CURRENT_BINARY_DIR}/FWCoreTFWLiteSelectorTest.rootmap DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
