--- a/FWCore/Version/CMakeLists.txt
+++ b/FWCore/Version/CMakeLists.txt
@@ -5,5 +5,6 @@ add_library(FWCoreVersion SHARED
 
 target_include_directories(FWCoreVersion PRIVATE ${CMAKE_SOURCE_DIR})
 
-install( TARGETS FWCoreVersion DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::FWCoreVersion)
+
+install( TARGETS FWCoreVersion DESTINATION  lib  EXPORT cmssw::FWCoreVersion)
 
