--- a/IOPool/Common/CMakeLists.txt
+++ b/IOPool/Common/CMakeLists.txt
@@ -4,20 +4,23 @@ add_library(IOPoolCommon SHARED
 )
 
 target_include_directories(IOPoolCommon PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(IOPoolCommon PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${MD5_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
-)
-target_link_libraries(IOPoolCommon PUBLIC
-  FWCoreServiceRegistry
-  FWCoreUtilities
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${MD5_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
 )
 
-install( TARGETS IOPoolCommon DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::IOPoolCommon)
+target_link_libraries(IOPoolCommon PUBLIC
+FWCoreServiceRegistry
+FWCoreUtilities
+)
+
+
+install( TARGETS IOPoolCommon DESTINATION  lib  EXPORT cmssw::IOPoolCommon)
 
