--- a/IOPool/Input/CMakeLists.txt
+++ b/IOPool/Input/CMakeLists.txt
@@ -17,38 +17,44 @@ add_library(IOPoolInput SHARED
 )
 
 target_include_directories(IOPoolInput PRIVATE ${CMAKE_SOURCE_DIR})
+
 target_include_directories(IOPoolInput PUBLIC
- ${Boost_INCLUDE_DIR}
- ${Boost_INCLUDE_DIR}/python
- ${CLHEP_INCLUDE_DIR}
- ${MD5_INCLUDE_DIR}
- ${OPENSSL_INCLUDE_DIR}
- ${Python2_INCLUDE_DIRS}
- ${ROOT_INCLUDE_DIR}
- ${TBB_INCLUDE_DIRS}
- ${TINYXML2_INCLUDE_DIR}
- ${UUID_INCLUDE_DIR}
- ${XERCESC_INCLUDE_DIR}
-)
-add_compile_options("-D_FILE_OFFSET_BITS=64")
-target_link_libraries(IOPoolInput PUBLIC
-  ${CLHEP_MAIN_LIBRARY}
-  DataFormatsCommon
-  DataFormatsProvenance
-  FWCoreCatalog
-  FWCoreFramework
-  FWCoreMessageLogger
-  FWCoreParameterSet
-  FWCoreServiceRegistry
-  FWCoreSources
-  FWCoreUtilities
-  IOPoolCommon
-  ROOT::MathCore
-  ROOT::Net
-  ROOT::Thread
-  ROOT::Tree
-  UtilitiesStorageFactory
+${Boost_INCLUDE_DIR}
+${Boost_INCLUDE_DIR}/python
+${CLHEP_INCLUDE_DIR}
+${MD5_INCLUDE_DIR}
+${OPENSSL_INCLUDE_DIR}
+${Python2_INCLUDE_DIR}
+${ROOT_INCLUDE_DIR}
+${TBB_INCLUDE_DIRS}
+${TINYXML2_INCLUDE_DIR}
+${UUID_INCLUDE_DIR}
+${XERCESC_INCLUDE_DIR}
 )
 
-install( TARGETS IOPoolInput DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::IOPoolInput)
+add_compile_options("-D_FILE_OFFSET_BITS=64")
+
+target_link_libraries(IOPoolInput PUBLIC
+${CLHEP_MAIN_LIBRARY}
+Core
+DataFormatsCommon
+DataFormatsProvenance
+FWCoreCatalog
+FWCoreFramework
+FWCoreMessageLogger
+FWCoreParameterSet
+FWCoreServiceRegistry
+FWCoreSources
+FWCoreUtilities
+IOPoolCommon
+MathCore
+Net
+RIO
+Thread
+Tree
+UtilitiesStorageFactory
+)
+
+
+install( TARGETS IOPoolInput DESTINATION  lib  EXPORT cmssw::IOPoolInput)
 
