--- a/Utilities/General/CMakeLists.txt
+++ b/Utilities/General/CMakeLists.txt
@@ -7,5 +7,6 @@ add_library(UtilitiesGeneral SHARED
 
 target_include_directories(UtilitiesGeneral PRIVATE ${CMAKE_SOURCE_DIR})
 
-install( TARGETS UtilitiesGeneral DESTINATION  ${CMAKE_INSTALL_LIBDIR}  EXPORT stitched::UtilitiesGeneral)
+
+install( TARGETS UtilitiesGeneral DESTINATION  lib  EXPORT cmssw::UtilitiesGeneral)
 
